--- a/src/app.json
+++ b/src/app.json
@@ -263,11 +263,7 @@
             "appCache": {
                 "enable": true,
                 "path": "../cache.appcache"
-            },
-            "resources": [
-                "resources",
-                "classic/resources"
-            ]
+            }
         },
         "loader": {
             "cache": "${build.timestamp}"
@@ -375,14 +371,13 @@
      */
 
     "output": {
-        "base": "${workspace.build.dir}/${build.environment}/${app.name}/${build.id}",
-        "page": "../index.html",
-        "manifest": "../${build.id}.json",
+        "base": "${workspace.build.dir}/${build.environment}/${app.name}",
+        "page": "index.html",
+        "manifest": "${build.id}.json",
         "appCache": {
             "enable": false
         }
     },
-
 
     /**
     * Controls for localStorage caching
@@ -431,6 +426,8 @@
      * Extra resources to be copied along when build
      */
     "resources": [
+        "classic/resources",
+        "resources",
         "favicon.ico"
     ],
 
