--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -5,7 +5,8 @@
                 "metadata-xml2json": "http://bfs-koala.intranet.terrestris.de/geonetwork/srv/ger/xml_iso19139Tojson",
                 "metadata-search": "http://bfs-koala.intranet.terrestris.de/geonetwork/srv/ger/csw?",
                 "spatial-search": "http://bfs-koala.intranet.terrestris.de/geoserver/BFS/ows",
-                "print-servlet": "http://bfs-koala.intranet.terrestris.de/print-servlet-3.3-SNAPSHOT/print/"
+                "print-servlet": "http://bfs-koala.intranet.terrestris.de/print-servlet-3.3-SNAPSHOT/print/",
+                "irix-servlet": "/irix-servlet"
             },
             "metadataSearchFields": ["title", "abstract"],
             "startCenter": [1234075.4566814213, 6706481.04685707],
