--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,12 @@
   "version": "0.0.1",
   "description": "Koala WebGIS",
   "scripts": {
-    "lint-js": "eslint -c .eslintrc app/ classic/"
+      "pretest": "npm run lint-js",
+      "test": "mocha-phantomjs --ssl-protocol=any --ignore-ssl-errors=true test/index.html",
+      "lint-js": "eslint -c .eslintrc app/ classic/ && eslint -c test/.eslintrc test/",
+      "save-coverage": "mocha-phantomjs --ssl-protocol=any --ignore-ssl-errors=true --hooks ./test/phantom_hooks.js test/index.html",
+      "clean-coverage": "rm -rf src_instrumented src_old coverage",
+      "html-coverage": "npm run clean-coverage && istanbul instrument src -o src_instrumented && mv src src_old && mv src_instrumented src && istanbul cover npm run save-coverage && mv src src_instrumented && mv src_old src && istanbul report --root ./coverage html"
   },
   "repository": {
     "type": "svn",
@@ -13,6 +18,11 @@
   "author": "terrestris GmbH & Co. KG <info@terrestris.de",
   "license": "gpl-3",
   "devDependencies": {
-    "eslint": "~0.20"
+    "eslint": "1.7.3",
+    "expect.js": "0.3.1",
+    "istanbul": "0.3.18",
+    "mocha": "2.3.3",
+    "mocha-phantomjs": "4.0.1",
+    "sinon": "1.17.2"
   }
 }
