Add dependency to ux package

--- a/src/app.json
+++ b/src/app.json
@@ -47,9 +47,9 @@
      */
     "requires": [
         "GeoExt",
-        //"basepackage",
         "BasiGX",
-        "charts"
+        "charts",
+        "ux"
     ],
 
     /**
