--- a/.hgignore
+++ b/.hgignore
@@ -1,8 +1,10 @@
 syntax: glob
+
 src/bootstrap.css
 src/bootstrap.js
-src/classic.json
 src/build/**
+src/classic.json
+src/coverage
 src/packages/**
 src/sass/example/bootstrap.js
 src/sass/example/bootstrap.json
