--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -18,6 +18,7 @@
                 "username": "data_reader",
                 "password": "data_reader"
             },
+            "print-timeout": 60000,
             "metadataSearchFields": ["title", "abstract"],
             "spatialSearchTypeName": "BFS:verwaltung_4326_geozg_sort",
             "startCenter": [1234075.4566814213, 6706481.04685707],
