Allow printouts without scalebar and northArrow
This build on top of https://github.com/terrestris/BasiGX/pull/74/files and
ensures that the setting of the northArrow and scalebar checkboxes have the
desired effect. To not show these elements, some colors are set to be
transparent and the northArrow image is set to a point to a transparent gif.

The URL to the gif-file can be set via appConfig.json (under the key
urls/print-transparent-img).

See https://redmine-koala.bfs.de/issues/1398

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -12,7 +12,8 @@
                 "spatial-search": "http://10.133.7.63/geoserver/BFS/ows",
                 "print-servlet": "http://10.133.7.63:8080/print-servlet-3.4-SNAPSHOT/print/",
 
-                "irix-servlet": "/irix-servlet"
+                "irix-servlet": "/irix-servlet",
+                "print-transparent-img": "https://upload.wikimedia.org/wikipedia/commons/c/ce/Transparent.gif"
             },
             "application_user": {
                 "username": "data_reader",
