--- a/.hgignore
+++ b/.hgignore
@@ -5,6 +5,7 @@ src/bootstrap.css
 src/bootstrap.js
 src/build/**
 src/classic.json
+src/modern.json
 src/coverage
 src/packages/**
 src/sass/example/bootstrap.js
