--- a/src/app.json
+++ b/src/app.json
@@ -20,7 +20,16 @@
      * to "Ext.require". The "app.dir" variable below is expanded to the path where the
      * application resides (the same folder in which this file is located).
      */
-    "classpath": "app,${toolkit.name}/src",
+    "classpath": [
+        "app",
+        "${toolkit.name}/src",
+        "packages/remote/GeoExt/src/component",
+        "packages/remote/GeoExt/src/data",
+        "packages/remote/GeoExt/src/util",
+        "packages/remote/GeoExt/src/mixin",
+        "packages/remote/BasiGX/src/util",
+        "packages/remote/BasiGX/src/view/component"
+    ],
 
     /**
      * Comma-separated string with the paths of directories or files to search. Any classes
@@ -46,10 +55,9 @@
      *      ]
      */
     "requires": [
-        "GeoExt",
-        "BasiGX",
         "charts",
-        "ux"
+        "ux",
+        "font-awesome"
     ],
 
     /**
@@ -192,12 +200,21 @@
      * Settings specific to modern toolkit builds.
      */
     "modern": {
-        "js": [
+/*        "js": [
             {
                 // Remove this entry to individually load sources from the framework.
                 "path": "${framework.dir}/build/ext-modern-all-debug.js"
             }
-        ]
+        ],*/
+        /**
+         * The toolkit to use. Select either "classic" or "modern".
+         */
+        "toolkit": "modern",
+
+        /**
+         * The name of the theme for this application.
+         */
+        "theme": "theme-triton"
     },
 
     /**
@@ -513,7 +530,12 @@
     "builds": {
         "classic": {
             "toolkit": "classic",
-            "theme": "theme-neptune"
+            "theme": "theme-neptune",
+            "requires": ["GeoExt", "BasiGX"]
+        },
+        "modern": {
+            "toolkit": "modern",
+            "theme": "theme-mountainview"
         }
     },
 
