--- a/src/app.json
+++ b/src/app.json
@@ -27,7 +27,11 @@
         "packages/remote/GeoExt/src/data",
         "packages/remote/GeoExt/src/util",
         "packages/remote/GeoExt/src/mixin",
-        "packages/remote/BasiGX/src/util",
+        "packages/remote/BasiGX/src/util/Application.js",
+        "packages/remote/BasiGX/src/util/ConfigParser.js",
+        "packages/remote/BasiGX/src/util/Controller.js",
+        "packages/remote/BasiGX/src/util/Layer.js",
+        "packages/remote/BasiGX/src/util/Map.js",
         "packages/remote/BasiGX/src/view/component",
         "packages/remote/BasiGX/src/view/button/ZoomIn.js",
         "packages/remote/BasiGX/src/view/button/ZoomOut.js",
