Layout fixes. Moved container to panels.

--- a/src/app.json
+++ b/src/app.json
@@ -552,7 +552,7 @@
         "modern": {
             "toolkit": "modern",
             "theme": "theme-neptune",
-            "requires": ["GeoExt", "BasiGX"]
+            "requires": ["GeoExt"]
         }
     },
 
