Fix modern build.

--- a/src/app.json
+++ b/src/app.json
@@ -465,6 +465,7 @@
             "path": "resources",
             "output": "resources"
         },
+        "resources",
         "${toolkit.name}/resources",
         "favicon.ico"
     ],
