Add d3 to eslint globals

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -9,7 +9,8 @@
         "FileReader": true,
         "Koala": true,
         "BasiGX": true,
-        "btoa": true
+        "btoa": true,
+        "d3": false
     },
     "rules": {
         "comma-dangle": 2,
