--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -5,6 +5,7 @@
         "ol": true,
         "window": true,
         "location": true,
+        "document": true,
         "FileReader": true,
         "Koala": true,
         "BasiGX": true,
