Render the label styler to the styler window and execute a callback method in the updateStyle() method

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -9,8 +9,7 @@
         "FileReader": true,
         "Koala": true,
         "BasiGX": true,
-        "btoa": true,
-        "document": true
+        "btoa": true
     },
     "rules": {
         "comma-dangle": 2,
