--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -43,7 +43,11 @@
             "mapConfig": {
                 "projection": "EPSG:3857",
                 "zoom": 0
-            }
+            },
+            "tools": [
+                "addWmsBtn",
+                "printBtn"
+            ]
         }
     },
     "success": true
