Minimum fixes for making the modern build pass
This adds two placeholder views to the modern sources which are required by some
files in the app folder. I have added TODO annotations to double check these
later.

Also changed is the app.json, so that the requirement for BasiGX.util.Color
can be satisfied.

--- a/src/app.json
+++ b/src/app.json
@@ -28,6 +28,7 @@
         "packages/remote/GeoExt/src/util",
         "packages/remote/GeoExt/src/mixin",
         "packages/remote/BasiGX/src/util/Application.js",
+        "packages/remote/BasiGX/src/util/Color.js",
         "packages/remote/BasiGX/src/util/ConfigParser.js",
         "packages/remote/BasiGX/src/util/Controller.js",
         "packages/remote/BasiGX/src/util/Layer.js",
