--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,15 @@ src/apidoc
 src/bootstrap.css
 src/bootstrap.js
 src/build/**
+src/ext/**
 src/classic.json
 src/modern.json
 src/coverage
 src/packages/**
 src/sass/example/bootstrap.js
 src/sass/example/bootstrap.json
+src/classic.jsonp
+src/sass/example/bootstrap.jsonp
 
 **/.~lock*
 **/npm-debug.log
