Update Sencha files to version 6.2.0

--- a/src/.sencha/workspace/sencha.cfg
+++ b/src/.sencha/workspace/sencha.cfg
@@ -1,3 +1,4 @@
+#Mon, 16 Jan 2017 13:29:45 +0100
 # -----------------------------------------------------------------------------
 # This file contains configuration options that apply to all applications in
 # the workspace. By convention, these options start with "workspace." but any
@@ -29,6 +30,6 @@ workspace.theme.dir=${workspace.packages.dir}/${args.themeName}
 # Customizations go below this divider to avoid merge conflicts on upgrade
 # =============================================================================
 
-workspace.cmd.version=6.0.0.202
+workspace.cmd.version=6.2.1.29
 
 ext.dir=${workspace.dir}/ext
