Update appContext dummy context to include spatialSeachFields

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -25,6 +25,10 @@
             "print-timeout": 60000,
             "metadataSearchFields": ["title", "abstract"],
             "spatialSearchTypeName": "BFS:verwaltung_4326_geozg_sort",
+            "spatialSearchFields": {
+                "searchColumn": "name",
+                "geomColumn": "geom"
+            },
             "startCenter": [1234075.4566814213, 6706481.04685707],
             "startZoom": 6,
             "mapLayers": [
