--- a/src/package.json
+++ b/src/package.json
@@ -4,9 +4,9 @@
   "version": "1.5.0",
   "description": "Koala WebGIS",
   "scripts": {
-    "pretest": "npm run lint-js",
+    "pretest": "npm run lint",
     "test": "node test/tasks/serve-and-run-tests.js",
-    "lint-js": "eslint -c .eslintrc app/ classic/ modern/ && eslint -c test/.eslintrc test/",
+    "lint": "eslint -c .eslintrc app/ classic/ modern/ && eslint -c test/.eslintrc test/",
     "test:watch": "watch 'npm test' app/ classic/ modern/ test/",
     "test:serve": "node test/tasks/serve-sourcecode.js",
     "test:run": "node test/tasks/run-tests.js",
