--- a/src/test/.eslintrc
+++ b/src/test/.eslintrc
@@ -1,12 +1,14 @@
 {
+    "env": {
+        "es6": true,
+        "browser": true,
+        "mocha": true,
+        "node": true,
+        "phantomjs": true
+    },
     "globals": {
-        "afterEach": false,
-        "beforeEach": false,
-        "describe": false,
         "document": false,
         "expect": false,
-        "it": false,
-        "sinon": false,
 
         "Ext": true,
         "GeoExt": true,
@@ -80,6 +82,7 @@
         "no-nested-ternary": 2,
         "no-trailing-spaces": 2,
         "semi": [2, "always"],
-        "max-len": [0, 80, 4]
+        "max-len": [0, 80, 4],
+        "global-require": "error"
     }
 }
