--- a/src/app.json
+++ b/src/app.json
@@ -20,26 +20,7 @@
      * to "Ext.require". The "app.dir" variable below is expanded to the path where the
      * application resides (the same folder in which this file is located).
      */
-    "classpath": [
-        "app",
-        "${toolkit.name}/src",
-        "packages/remote/GeoExt/src/component",
-        "packages/remote/GeoExt/src/data",
-        "packages/remote/GeoExt/src/util",
-        "packages/remote/GeoExt/src/mixin",
-        "packages/remote/BasiGX/src/plugin",
-        "packages/remote/BasiGX/src/util/Application.js",
-        "packages/remote/BasiGX/src/util/Color.js",
-        "packages/remote/BasiGX/src/util/ConfigParser.js",
-        "packages/remote/BasiGX/src/util/Controller.js",
-        "packages/remote/BasiGX/src/util/Layer.js",
-        "packages/remote/BasiGX/src/util/Map.js",
-        "packages/remote/BasiGX/src/view/button/ZoomIn.js",
-        "packages/remote/BasiGX/src/view/button/ZoomOut.js",
-        "packages/remote/BasiGX/src/view/button/ZoomToExtent.js",
-        "packages/remote/BasiGX/src/view/panel/MobileWindow.js",
-        "packages/remote/BasiGX/src/view/component"
-    ],
+    /* Note: Classpath is set in the toolkit speific builds configuration */
 
     /**
      * Comma-separated string with the paths of directories or files to search. Any classes
@@ -554,12 +535,37 @@
         "classic": {
             "toolkit": "classic",
             "theme": "theme-neptune",
-            "requires": ["GeoExt", "BasiGX"]
+            "classpath": [
+                "app",
+                "${toolkit.name}/src",
+                "lib/GeoExt/src",
+                "lib/BasiGX/src"
+            ]
         },
         "modern": {
             "toolkit": "modern",
-            "theme": "theme-neptune"
-            /*"requires": ["GeoExt", "BasiGX"]*/
+            "theme": "theme-neptune",
+            "classpath": [
+                "app",
+                "${toolkit.name}/src",
+                "lib/GeoExt/src",
+                "lib/BasiGX/src/util/Animate.js",
+                "lib/BasiGX/src/util/Application.js",
+                "lib/BasiGX/src/util/Color.js",
+                "lib/BasiGX/src/util/ConfigParser.js",
+                "lib/BasiGX/src/util/Controller.js",
+                "lib/BasiGX/src/util/CopyClipboard.js",
+                "lib/BasiGX/src/util/CSRF.js",
+                "lib/BasiGX/src/util/Layer.js",
+                "lib/BasiGX/src/util/Map.js",
+                "lib/BasiGX/src/util/Object.js",
+                "lib/BasiGX/src/util/Url.js",
+                "lib/BasiGX/src/view/button/ZoomIn.js",
+                "lib/BasiGX/src/view/button/ZoomOut.js",
+                "lib/BasiGX/src/view/button/ZoomToExtent.js",
+                "lib/BasiGX/src/view/component/Map.js",
+                "lib/BasiGX/src/view/panel/MobileWindow.js"
+            ]
         }
     },
 
