--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,26 +3,19 @@
 # https://hub.docker.com/r/library/node/tags/
 image: node:latest
 
-# Pick zero or more services to be used on all builds.
-# Only needed when using a docker container to run your tests in.
-# Check out: http://docs.gitlab.com/ce/ci/docker/using_docker_images.html#what-is-service
-#services:
-  #- mysql:latest
-  #- redis:latest
-  #- postgres:latest
-
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
-cache:
-  paths:
-  - node_modules/
+#cache:
+ # paths:
+ # - node_modules/
 
-test_async:
+stages:
+  - test
+
+test:
+  stage: test_branch
+  only:
+    - branches
   script:
    - npm install
-   - node ./specs/start.js ./specs/async.spec.js
-
-#test_db:
-  #script:
-   #- npm install
-   #- node ./specs/start.js ./specs/db-postgres.spec.js
+   - npm test
