Adds a sinon test for removeLayer.

--- a/src/test/.eslintrc
+++ b/src/test/.eslintrc
@@ -9,6 +9,7 @@
     "globals": {
         "document": false,
         "expect": false,
+        "sinon":false,
 
         "Ext": true,
         "GeoExt": true,
