Adds setupTestDiv helper function.

--- a/src/test/.eslintrc
+++ b/src/test/.eslintrc
@@ -9,7 +9,8 @@
     "globals": {
         "document": false,
         "expect": false,
-        "sinon":false,
+        "sinon":false,,
+        "TestUtil":false,
 
         "Ext": true,
         "GeoExt": true,
