--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -82,7 +82,10 @@
             }, {
                 "uuid": "0613135b-8a4a-496d-b4a2-bf67831c620d",
                 "label": "Local Vector Data Template (bundeslaender)"
-            }]
+            }],
+
+            "wmsUrls": ['http://ows.terrestris.de/osm/service',
+                'http://ows.mundialis.de/services/service' ]
         }
     },
     "success": true
