'Fix the WMS dialog mobil and the appContext File and the Classic Main.js'

--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -84,8 +84,8 @@
                 "label": "Local Vector Data Template (bundeslaender)"
             }],
 
-            "wmsUrls": ['http://ows.terrestris.de/osm/service',
-                'http://ows.mundialis.de/services/service' ]
+            "wmsUrls": ["http://ows.terrestris.de/osm/service",
+                "http://ows.mundialis.de/services/service" ]
         }
     },
     "success": true
