--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -69,7 +69,11 @@
         "no-unused-vars": 2,
         "no-use-before-define": 2,
 
-          "keyword-spacing": 1,
+        "keyword-spacing": 1,
+        "key-spacing": [1, {
+            "beforeColon": false,
+            "afterColon": true
+        }],
         "space-before-blocks": 1,
         "space-before-function-paren": [1, "never"],
         "brace-style": [1, "1tbs"],
