Adds new favicons to support mobile bookmarks.

--- a/src/app.json
+++ b/src/app.json
@@ -450,7 +450,10 @@
         },
         "resources",
         "${toolkit.name}/resources",
-        "favicon.ico"
+        "favicon.ico",
+        "favicon-16x16.png",
+        "android-icon-192x192.png",
+        "apple-icon-152x152.png"
     ],
 
     /**
