Fix strange bug with filename starting with "apple".

--- a/src/app.json
+++ b/src/app.json
@@ -453,7 +453,7 @@
         "favicon.ico",
         "favicon-16x16.png",
         "android-icon-192x192.png",
-        "apple-icon-152x152.png"
+        "ios-icon-152x152.png"
     ],
 
     /**
