--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -7,6 +7,8 @@
         "location": true,
         "document": true,
         "FileReader": true,
+        "XMLSerializer": false,
+        "Image": false,
         "Koala": true,
         "BasiGX": true,
         "btoa": true,
