--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -82,6 +82,7 @@
         "brace-style": [1, "1tbs"],
         "eol-last": 1,
         "indent": 0,
+        "quotes": ["error", "single"],
         "linebreak-style": [2, "unix"],
         "no-mixed-spaces-and-tabs": 2,
         "no-nested-ternary": 0,
