Basic initilaization of draw-measure tools.

--- a/src/app.json
+++ b/src/app.json
@@ -448,6 +448,9 @@
             "path": "resources",
             "output": "resources"
         },
+        {
+            "path": "sass/etc/fonts"
+        },
         "resources",
         "${toolkit.name}/resources",
         "favicon.ico",
