--- a/src/resources/appContext.json
+++ b/src/resources/appContext.json
@@ -85,7 +85,9 @@
             }],
 
             "wmsUrls": ["http://ows.terrestris.de/osm/service",
-                "http://ows.mundialis.de/services/service" ]
+                "http://ows.mundialis.de/services/service" ],
+
+            "redLineLayerName": "Messungen"
         }
     },
     "success": true
